# ChessProject

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Manager.cpp  NullPiece.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Player.cpp  Queen.cpp  Queen.h  Rook.cpp  Source.cpp
